--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -27,8 +28,16 @@
     "css-loader": "^1.0.1",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "^4.10.0",
+    "react-hot-loader": "^4.3.12",
     "sass-loader": "^7.1.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2"
+  },
+  "dependencies": {
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "popper.js": "^1.14.5",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3"
   }
 }
